k8s-yaml/kube-prometheus/prometheus/prometheus-Ingress-v19.0+.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prometheus-dashboard
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.tycng.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service: 
                name: prometheus-k8s
                port: 
                  number: 9090
